--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "apollo-server-express": "^3.6.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "dotenv": "^16.0.0",
     "graphql": "^16.3.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
