--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@nestjs/apollo": "^10.0.7",
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^10.0.7",
     "@nestjs/platform-express": "^8.0.0",
@@ -30,7 +31,6 @@
     "apollo-server-express": "^3.6.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "dotenv": "^16.0.0",
     "graphql": "^16.3.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
