--- a/package.json
+++ b/package.json
@@ -62,6 +62,9 @@
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5"
   },
+  "engines": {
+    "node": "14.15.0"
+  },
   "jest": {
     "moduleFileExtensions": [
       "js",
